添加FireRadius弹头，修复vectorbooster，添加一个meow项目

--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -18,6 +18,10 @@
 	GrantConditionOnDamageState@test:
 		Condition: nocloth
 		ValidDamageStates: Heavy, Critical
+	ExplosionOnDamageTransition:
+		Weapon: ProtonFlameMissileCluster
+		DamageState: Heavy
+		Offset: 0,0,1024
 	# WithMeshCloth@skirt:
 	# 	Mesh: skirt-split
 	# 	Masks: Hip
