rpg system, inventory 初步，感谢icereaper

--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -170,6 +170,9 @@ RUTEST2:
 		Bounds: 905, 3000, 0, -1300
 	Voiced:
 		VoiceSet: Oxanna
+	Inventory:
+		Name: test
+		InitItems: item1, item2, item3, item4, item5, item6
 
 RUTEST3:
 	Inherits: RUTEST
