--- a/OpenRA.Meow.RPG/OpenRA.Meow.RPG.csproj
+++ b/OpenRA.Meow.RPG/OpenRA.Meow.RPG.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+	</PropertyGroup>
+	
   <ItemGroup>
     <ProjectReference Include="..\OpenRA.Game\OpenRA.Game.csproj">
 	  <Private>False</Private>
@@ -7,6 +11,10 @@
     <ProjectReference Include="..\OpenRA.Mods.Common\OpenRA.Mods.Common.csproj">
 	  <Private>False</Private>
 	 </ProjectReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Mechanics\Global\" />
   </ItemGroup>
 
 </Project>
