limpet drone and cyborg reaper not damage by veins

--- a/mods/ts/rules/gdi-vehicles.yaml
+++ b/mods/ts/rules/gdi-vehicles.yaml
@@ -739,4 +739,5 @@ LIMPED:
 		RequiresCondition: !inside-tunnel && deployed && (damaged-state || critical-state)
 	UnitDisplayInfo:
 	-SpawnActorOnDeath@ctech:
-
+	-DamagedByTerrain@VEINS:
+	-LeavesTrails@VEINS:
