--- a/mods/ts/rules/aircraft.yaml
+++ b/mods/ts/rules/aircraft.yaml
@@ -739,6 +739,7 @@ QDRONE:
 		Image: quaddrone-mini
 	Armament:
 		Weapon: DroneReconDummyWeapon
+		ShowInActorInfo: false
 	RejectsOrders:
 	-MapEditorData:
 	-SpawnActorOnDeath:
