--- a/mods/ts/weapons/superweapons.yaml
+++ b/mods/ts/weapons/superweapons.yaml
@@ -84,7 +84,7 @@ ChemicalCluster:
 		Speed: 120
 		MinSpeed: 55
 		MaxSpeed: 388
-		Inaccuracy: 1c512
+		Inaccuracy: 0
 		Acceleration: 10
 		ContrailStartColor: 00FF00
 		ContrailStartColorOuter: AAAA00
@@ -94,6 +94,7 @@ ChemicalCluster:
 		AllowSnapping: false
 		HorizonRotationRate: 33
 		VerticalRotationRate: 22
+		JetPalette: lightgreen
 	Warhead@1Dam: SpreadDamage
 		Spread: 458
 		Damage: 6000
