add Autocrusher for baby visc

--- a/mods/ts/rules/critters.yaml
+++ b/mods/ts/rules/critters.yaml
@@ -88,6 +88,7 @@ VISC_SML:
 		CrushClasses: visceroid-fusing
 		WarnProbability: 0
 		CrushedByFriendlies: True
+	AutoCrusher:
 	TransformCrusherOnCrush:
 		IntoActor: visc_lrg
 		CrushClasses: visceroid-fusing
