walk impact测试，rutest可以使用踩踏武器

--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -18,6 +18,9 @@
 	GrantConditionOnDamageState@test:
 		Condition: nocloth
 		ValidDamageStates: Heavy, Critical
+	SpeedMultiplier@test:
+		RequiresCondition: nocloth
+		Modifier: 120
 	ExplosionOnDamageTransition:
 		Weapon: ProtonFlameMissileCluster
 		DamageState: Heavy
@@ -51,6 +54,8 @@
 		GuardBlendTick: 10
 		UpperMask: upper
 		LowerMask: lower
+
+		WalkWeapon: WalkImpact
 	WithSkeleton:
 		Name: body
 	RenderMeshes:
@@ -67,6 +72,7 @@ RUTEST:
 	Inherits: ^Vehicle
 	Inherits@meshtest: ^WithMeshTest
 	Inherits@EXPERIENCE: ^GainsExperience
+	Inherits@healontib: ^HealsOnTiberium
 	Valued:
 		Cost: 1200
 	Tooltip:
@@ -76,8 +82,8 @@ RUTEST:
 		AddToArmyValue: false
 	Mobile:
 		TurnSpeed: 66
-		Speed: 90
-		Locomotor: tracked
+		Speed: 100
+		Locomotor: heavywalker
 		# AlwaysTurnInPlace: true
 		# CanMoveBackward: true
 	Health:
@@ -105,7 +111,7 @@ RUTEST2:
 	Valued:
 		Cost: 4000
 	Health:
-		HP: 80000
+		HP: 100000
 	Buildable:
 		Queue: Vehicle
 		BuildPaletteOrder: 80
@@ -170,9 +176,11 @@ RUTEST2:
 		Bounds: 905, 3000, 0, -1300
 	Voiced:
 		VoiceSet: Oxanna
-	Inventory:
-		Name: test
-		InitItems: item1, item2, item3, item4, item5, item6
+	# Inventory:
+	# 	Name: test
+	# 	InitItems: item1, item2, item3, item4, item5, item6
+	ChangesHealth:
+		Step: 500
 
 RUTEST3:
 	Inherits: RUTEST
