--- a/mods/ts/weapons/otherweapons.yaml
+++ b/mods/ts/weapons/otherweapons.yaml
@@ -513,3 +513,33 @@ TitianDroneCheck:
 		Blockable: false
 
 DummyWeapon:
+
+WalkImpact:
+	ValidTargets: Ground, Water, Air, Trees
+	Warhead@inf: Spread3DDamage
+		Damage: 10000
+		Spread: 0c330
+		Versus:
+			None: 1000
+			Wood: 35
+			Light: 500
+			Heavy: 75
+			Concrete: 5
+		DamageTypes: TriggerProne, CrushedDeath
+		ValidTargets: Infantry
+	Warhead@1Dam: Spread3DDamage
+		Damage: 1000
+		Spread: 0c330
+		Versus:
+			None: 100
+			Wood: 35
+			Light: 100
+			Heavy: 75
+			Concrete: 5
+		DamageTypes: TriggerProne, CrushedDeath
+		ValidTargets: Ground, Water, Air, Trees
+	Warhead@2Eff: CreateEffect
+		Image: cloud
+		Explosions: cloud1, cloud2
+		ImpactSounds: expnew13.aud
+		ImpactActors: false
