--- a/mods/ts/rules/world.yaml
+++ b/mods/ts/rules/world.yaml
@@ -103,6 +103,19 @@
 			Tiberium: 75
 			BlueTiberium: 75
 			Veins: 50
+	Locomotor@superwalker:
+		Name: superwalker
+		Crushes: wall, crate, infantry, bigguy
+		TerrainSpeeds:
+			Clear: 90
+			Road: 100
+			Bridge: 90
+			Rail: 90
+			DirtRoad: 90
+			Rough: 90
+			Tiberium: 75
+			BlueTiberium: 75
+			Veins: 50
 	Locomotor@TRACKED:
 		Name: tracked
 		Crushes: wall, crate, infantry
