moblie可以添加BlockedBy来决定这个单位的运动被如何阻挡

--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -83,7 +83,8 @@ RUTEST:
 	Mobile:
 		TurnSpeed: 66
 		Speed: 100
-		Locomotor: superwalker
+		Locomotor: walker
+		BlockedBy: Static
 		# AlwaysTurnInPlace: true
 		# CanMoveBackward: true
 	AutoCrusher:
